@@ -1,7 +1,7 @@
 package com.api.ecoshieldwebservice.services;
 
 import com.api.ecoshieldwebservice.dtos.request.BlogRequestDTO;
-import com.api.ecoshieldwebservice.dtos.BlogResponseDTO;
+import com.api.ecoshieldwebservice.dtos.response.BlogResponseDTO;
 import com.api.ecoshieldwebservice.entities.Blog;
 import com.api.ecoshieldwebservice.entities.Usuario;
 import com.api.ecoshieldwebservice.enums.BlogTipo;
@@ -10,11 +10,12 @@ import com.api.ecoshieldwebservice.repositories.BlogRepository;
 import com.api.ecoshieldwebservice.repositories.UsuarioRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.time.OffsetDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class BlogService implements IBlogServices {
@@ -30,17 +31,22 @@ public class BlogService implements IBlogServices {
 
     @Override
     public BlogResponseDTO findById(Long id) {
-        return blogRepository.findById(id)
-                .map(blog -> modelMapper.map(blog, BlogResponseDTO.class))
-                .orElse(null);
+        Blog blog = blogRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Blog no encontrado"));
+        return modelMapper.map(blog, BlogResponseDTO.class);
     }
 
     @Override
     public BlogResponseDTO registrar(BlogRequestDTO blogRequestDTO) {
-        Blog blog = modelMapper.map(blogRequestDTO, Blog.class);
+        if (blogRequestDTO.getBlogTitulo() == null || blogRequestDTO.getBlogTitulo().isBlank()
+                || blogRequestDTO.getBlogDescripcion() == null || blogRequestDTO.getBlogDescripcion().isBlank()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Título y contenido son obligatorios");
+        }
 
         Usuario usuario = usuarioRepository.findById(blogRequestDTO.getUsuarioId())
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuario no encontrado"));
+
+        Blog blog = modelMapper.map(blogRequestDTO, Blog.class);
         blog.setUsuario(usuario);
         blog.setBlogFechaPublicacion(OffsetDateTime.now());
 
@@ -50,48 +56,62 @@ public class BlogService implements IBlogServices {
 
     @Override
     public BlogResponseDTO actualizar(Long id, BlogRequestDTO blogRequestDTO) {
-        if (blogRepository.existsById(id)) {
-            Blog blog = modelMapper.map(blogRequestDTO, Blog.class);
-            blog.setBlogId(id);
+        Blog blogExistente = blogRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Blog no encontrado"));
 
-            Usuario usuario = usuarioRepository.findById(blogRequestDTO.getUsuarioId())
-                    .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
-            blog.setUsuario(usuario);
-            blog.setBlogFechaPublicacion(OffsetDateTime.now());
-
-            Blog actualizado = blogRepository.save(blog);
-            return modelMapper.map(actualizado, BlogResponseDTO.class);
+        if (blogRequestDTO.getBlogTitulo() == null || blogRequestDTO.getBlogTitulo().isBlank()
+                || blogRequestDTO.getBlogDescripcion() == null || blogRequestDTO.getBlogDescripcion().isBlank()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Título y contenido son obligatorios");
         }
-        return null;
+
+        Usuario usuario = usuarioRepository.findById(blogRequestDTO.getUsuarioId())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuario no encontrado"));
+
+        modelMapper.map(blogRequestDTO, blogExistente);
+
+        blogExistente.setUsuario(usuario);
+        blogExistente.setBlogFechaPublicacion(OffsetDateTime.now());
+
+        Blog actualizado = blogRepository.save(blogExistente);
+        return modelMapper.map(actualizado, BlogResponseDTO.class);
     }
 
+
     @Override
-    public boolean borrar(Long id) {
-        if (blogRepository.existsById(id)) {
-            blogRepository.deleteById(id);
-            return true;
+    public void borrar(Long id) {
+        if (!blogRepository.existsById(id)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Blog no encontrado");
         }
-        return false;
+        blogRepository.deleteById(id);
     }
 
     @Override
     public List<BlogResponseDTO> findAll() {
-        return blogRepository.findAll()
-                .stream()
+        List<Blog> lista = blogRepository.findAll();
+        if (lista.isEmpty()) {
+            throw new ResponseStatusException(HttpStatus.NO_CONTENT, "No hay blogs disponibles");
+        }
+        return lista.stream()
                 .map(blog -> modelMapper.map(blog, BlogResponseDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public BlogResponseDTO findTipDelDia() {
         Blog blog = blogRepository.findFirstByBlogTipoOrderByBlogFechaPublicacionDesc(BlogTipo.TIP);
-        return blog != null ? modelMapper.map(blog, BlogResponseDTO.class) : null;
+        if (blog == null) {
+            throw new ResponseStatusException(HttpStatus.NO_CONTENT, "No hay tip del día disponible");
+        }
+        return modelMapper.map(blog, BlogResponseDTO.class);
     }
 
     @Override
     public List<BlogResponseDTO> findAllNews() {
-        return blogRepository.findAllNews()
-                .stream()
+        List<Blog> lista = blogRepository.findAllNews();
+        if (lista.isEmpty()) {
+            throw new ResponseStatusException(HttpStatus.NO_CONTENT, "No hay noticias disponibles");
+        }
+        return lista.stream()
                 .map(blog -> modelMapper.map(blog, BlogResponseDTO.class))
                 .toList();
     }
